crates/tree-sitter/grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.config_decl, // Declaration of CONFIGURATION and RESOURCE
          $.prog_decl, // Declaration of PROGRAM
          $.namespace_decl, // Declaration of NAMESPACE (including all other declarations)
          // Global POUs declarations
          $.data_type_decl,
          $.func_decl,
          $.fb_decl,
          $.class_decl,
          $.interface_decl,
          // Global using
          $.using_directive,
          //$.ERR_invalid_pou_keyword,
        ),
      ),

    // Other - Errors

    // Pou declaration errors
    // Note that this error is rather consuming and i'm unsure if it should be kept
    line_comment: ($) => token(seq("//", /.*/)),

    // `(* *)` and `/* */` are read by the external scanner, src/scanner.c:
    // a comment nests, `(* (* NESTED *) *)`, and only a scanner can count.

    // Table 4 - Pragma

    // `pragma`, a pragma rk has no rule for, is read by the external
    // scanner as well; the compiler reports it (E1510).

    // Extern pragma - declares the annotated FUNCTION as a WASM import.
    // {extern 'module' 'name'}
    // Sits ABOVE the FUNCTION like {test}. The import's signature IS the
    // declaration - VAR_INPUT -> params, scalar VAR_OUTPUT -> results, the
    // return type as the LAST result - so there is nothing else to state,
    // and nothing that can disagree with it.
    extern_pragma: ($) =>
      prec(1, seq(
        "{",
        "extern",
        field("module", $.pragma_string),
        field("name", $.pragma_string),
        "}",
      )),

    extern_param_list: ($) =>
      seq("(", "params", repeat1(field("var", $.identifier)), ")"),

    extern_result: ($) =>
      seq("(", "result", field("var", $.identifier), ")"),

    // Wasm intrinsic pragma - emits a WASM instruction directly
    // {wasm [type_ref] 'instruction' (params ...) (result ...)}
    pragma_string: (_) => /\'[^\']*\'/,

    // Warn/info pragma - emits a diagnostic at call sites of the annotated POU
    // {warn = 'message'} or {info = 'message'}
    once_pragma: (_) => prec(1, token(seq("{", "once", "}"))),

    // Export pragma - the annotated FUNCTION is a WASM export, under its name.
    // {export}
    // Nothing else a workspace declares is exported, so an optimizer may drop
    // what nothing calls.
    export_pragma: (_) => prec(1, token(seq("{", "export", "}"))),

    // Unified POU pragma list - validated during HIR building
    // Covers: {test}, {once}, {export}, {warn = '...'}, {info = '...'},
    // {extern 'module' 'name'}
    pou_pragma: ($) =>
      choice(
        $.test_pragma,
        $.once_pragma,
        $.export_pragma,
        $.warn_pragma,
        $.extern_pragma,
        $.allow_pragma,
      ),

    // Table 5 - Numeric literal

    constant: ($) =>
      choice($.numeric_literal, $.char_literal, $.time_literal, $.bool_literal),

    bool_literal: ($) =>
      choice($.bool_literal_with_string, $.bool_literal_with_numeric),

    bool_literal_with_string: ($) =>
      seq(optional(kw("BOOL#")), field("value", choice(kw("TRUE"), kw("FALSE")))),
    numeric_type_name: ($) => choice($.int_type_name, $.real_type_name),

    int_type_name: ($) => choice($.sign_int_type_name, $.unsign_int_type_name),

    sign_int_type_name: ($) =>
      choice(
        alias(kw("SINT"), $.sint_name),
        alias(kw("INT"), $.int_name),
        alias(kw("DINT"), $.dint_name),
        alias(kw("LINT"), $.lint_name),
      ),

    real_type_name: ($) =>
      choice(alias(kw("REAL"), $.real_name), alias(kw("LREAL"), $.lreal_name)),

    variable: ($) => choice($.begin_path_expression, $.direct_variable),

    // Var_Access : Variable_Name;
    var_access: ($) =>
      choice(
        $.ERR_unexpected_this_in_path,
        $.ERR_unexpected_super_in_path,
        alias($.identifier, $.field),
      ),

    // A section ends with an optional `;`, and a statement list may begin
    // with an empty statement: after `END_VAR ;` both readings fit, and
    // `prec.right` keeps the `;` with the section, as before. Every section
    // a body can follow is wrapped the same way, and so is USING.
    input_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_INPUT"),
          field("retain", optional(choice(kw("RETAIN"), kw("NON_RETAIN")))),
          repeat(
            seq(choice($.input_var, $.ERR_variable_with_no_spec), optional(";")),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    input_var: ($) =>
      seq(
        field("variables", $.variable_list),
        field("type", $._input_var_kind),
      ),

    _input_var_kind: ($) =>
      choice($.var_decl_init, $.edge_decl, $.array_conformand, $.variadic_decl),

    var_decl_init: ($) =>
      useSpecInit(
        ["simple", "subrange", "ref", "array", "struct"],
        [
          "simple",
          "array",
          "struct",
        ],
      )($),

    // ( Simple_Spec | Str_Var_Decl | Array_Var_Decl | Struct_Var_Decl )

    // INOUT
    // TEMP
    variable_list: ($) => commaSep1($.identifier),

    var_decls: ($) =>
      prec.right(
        seq(
          kw("VAR"),
          field("constant", optional(kw("CONSTANT"))),
          field("access", optional($.access_spec)),
          repeat(
            seq(
              choice(
                $.var_decl_init_list,
                $.loc_var_decl,
                $.ERR_variable_with_no_spec,
              ),
              optional(";"),
            ),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    var_decl_init_list: ($) =>
      seq(field("variables", $.variable_list), field("type", $.var_decl_init)),

    func_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("FUNCTION"),
        field("spec", optional($.access_spec)),
        field("name", $.identifier),
        optional(seq(":", field("return_type", $.data_type_access))),
        field("directives", repeat($.using_directive)),
        field("variables", repeat($._func_variables)),
        field("body", optional($.func_body)),
        kw("END_FUNCTION"),
      ),

    _func_variables: ($) =>
      choice(...io_var_decls($), ...func_var_decls($),
        $.temp_var_decls,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed
      ),

    func_body: ($) => choice($.ladder_diagram, $.fb_diagram, $.stmt_list),

    // Table 40 – Function block type declaration
    // Table 41 - Function block instance declaration

    fb_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("FUNCTION_BLOCK"),
        field("qualifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("name", $.identifier),
        optional($.ERR_implements_before_extends),
        optional(seq(kw("EXTENDS"), field("extends", $.namespace_access))),
        optional(repeat($.ERR_extends_multiple_times)),
        optional(seq(kw("IMPLEMENTS"), field("implements", $.interface_name_list))),
        optional(repeat($.ERR_implements_multiple_times)),
        field("directives", repeat($.using_directive)),
        field("variables", repeat($._fb_variables)),
        field("method", repeat($.method_decl)),
        optional($.ERR_fb_variables_after_method),
        field("body", optional($.fb_body)),
        kw("END_FUNCTION_BLOCK"),
      ),

    _fb_variables: ($) =>
      choice(
        $.fb_input_decls,
        $.fb_output_decls,
        $.in_out_decls,
        $.temp_var_decls,
        ...func_var_decls($),
        ...other_var_decls($),
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_global_not_allowed,
      ),

    fb_body: ($) => choice($.SFC, $.ladder_diagram, $.fb_diagram, $.stmt_list),

    method_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("METHOD"),
        field("access", optional($.access_spec)),
        field("modifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("_override", optional(kw("OVERRIDE"))),
        field("name", $.identifier),
        optional(seq(":", field("return_type", $.data_type_access))),
        field(
          "variables",
          repeat(
            $._method_decl_variables
          ),
        ),
        field("body", optional($.func_body)),
        kw("END_METHOD"),
      ),

    _method_decl_variables: ($) =>
      choice(
        ...io_var_decls($),
        ...func_var_decls($),
        $.temp_var_decls,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed,
      ),

    // Table 48 - Class
    // Table 50 Textual call of methods – Formal and non-formal parameter list

    class_decl: ($) =>
      seq(
        kw("CLASS"),
        field("modifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("name", $.identifier),
        field("directives", repeat($.using_directive)),
        optional($.ERR_implements_before_extends),
        optional(seq(kw("EXTENDS"), field("extends", $.namespace_access))),
        optional(repeat($.ERR_extends_multiple_times)),
        optional(seq(kw("IMPLEMENTS"), field("implements", $.interface_name_list))),
        optional(repeat($.ERR_implements_multiple_times)),
        field("variables", repeat($._class_variables)),
        field("methods", repeat($.method_decl)),
        optional($.ERR_class_variables_after_method),
        kw("END_CLASS"),
      ),

    _class_variables: ($) =>
      choice(...func_var_decls($), ...other_var_decls($),
        $.ERR_var_in_out_not_allowed,
        $.ERR_var_temp_not_allowed,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed
      ),

    interface_decl: ($) =>
      seq(
        kw("INTERFACE"),
        field("name", $.identifier),
        field("directives", repeat($.using_directive)),
        optional(seq(kw("EXTENDS"), field("extends", $.interface_name_list))),
        optional(repeat($.ERR_extends_multiple_times)),
        field("prototype", repeat($.method_prototype)),
        kw("END_INTERFACE"),
      ),

    method_prototype: ($) =>
      seq(
        kw("METHOD"),
        optional($.ERR_access_spec_in_method_prototype),
        field("name", $.identifier),
        optional(seq(":", field("data_type", $.data_type_access))),
        field("variables", repeat($._method_prot_variables)),
        kw("END_METHOD"),
      ),

    _method_prot_variables: ($) =>
      choice(...io_var_decls($),
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed,
        // temp and in_out are not allowed too
        $.ERR_var_temp_not_allowed,
        $.ERR_var_in_out_not_allowed
      ),

    interface_name_list: ($) => commaSep1($.namespace_access),

    access_spec: ($) =>
      choice(
        alias(kw("PUBLIC"), $.public),
        alias(kw("PROTECTED"), $.protected),
        alias(kw("PRIVATE"), $.private),
        alias(kw("INTERNAL"), $.internal),
      ),

    // Table 47 - Program declaration

    namespace_decl: ($) =>
      seq(
        kw("NAMESPACE"),
        field("internal", optional(kw("INTERNAL"))),
        field("name", $.namespace_h_name),
        field("directives", repeat($.using_directive)),
        field("elements", optional($.namespace_elements)),
        kw("END_NAMESPACE"),
      ),

    namespace_elements: ($) =>
      repeat1(
        choice(
          $.data_type_decl,
          $.func_decl,
          $.fb_decl,
          $.class_decl,
          $.interface_decl,
          $.namespace_decl,
          //$.ERR_invalid_pou_keyword,
          $.ERR_program_not_allowed_in_namespace,
          $.ERR_config_not_allowed_in_namespace,
        ),
      ),

    namespace_h_name: ($) => dotSep1($.identifier),

    _expression: ($) =>
      choice(
        $.fold_expression,
        $.boolean_operator,
        $.comparison_operator,
        $.add_operator,
        $.mult_operator,
        $.power_operator,
        $.unary_operator,
        $._primary_expression,
      ),

    // Fold expression: variadic parameter folded with a binary operator
    // e.g. ...IN+ (left fold: IN[0] + IN[1] + ... + IN[N-1])
    comparison_operator: ($) => choice($.eq_operator, $.ord_operator),

    eq_operator: ($) =>
      prec.left(
        RK_PREC.equality,
        seq(
          field("left", $._expression),
          field("operator", $.eq),
          field("right", $._expression),
        ),
      ),
    ord_operator: ($) =>
      prec.left(
        RK_PREC.comparison,
        seq(
          field("left", $._expression),
          field("operator", $.ord),
          field("right", $._expression),
        ),
      ),

    add_operator: ($) =>
      prec.left(
        RK_PREC.add,
        seq(
          field("left", $._expression),
          field("operator", $.add),
          field("right", $._expression),
        ),
      ),

    mult_operator: ($) =>
      prec.left(
        RK_PREC.modulo,
        seq(
          field("left", $._expression),
          field("operator", $.mult),
          field("right", $._expression),
        ),
      ),

    variable_access: ($) =>
      seq(
        field("variable", $.variable),
        field("access", optional($.multibit_part_access)),
      ),

    func_call: ($) =>
      seq(
        field("function", $.begin_path_expression),
        "(",
        prec(
          RK_PREC.parameter_list,
          field("params", commaSep($.param_assign)),
        ),
        ")",
      ),

    // A `;` ends a statement, and stands on its own as the empty statement
    // of IEC 61131-3's `( Stmt? ';' )*`. Neither is required here: a
    // statement may go without one, and `;;` is a statement and an empty
    // one.
    stmt_list: ($) => prec.left(repeat1(choice($._stmt, ";"))),

    // Stmt : Assign_Stmt | Subprog_Ctrl_Stmt | Selection_Stmt | Iteration_Stmt;
    _stmt: ($) =>
      choice(
        // assignments
        $.assign,
        //$.empty_path_expression, // used for completions
        // subprog
        $.func_call,
        // invocations (THIS, SUPER)
        $.begin_path_expression,
        kw("RETURN"),
        // selection
        $.if_stmt,
        $.case_stmt,
        // iteration
        $.for_stmt,
        $.while_stmt,
        $.repeat_stmt,
        kw("EXIT"),
        kw("CONTINUE"),
        // Throws a wasm-level exception with a STRING payload
        $.raise_stmt,
        $.wasm_pragma,
        $.allow_pragma,
        $.ERR_method_decl_in_body
      ),

    // assignment: $ => seq(
    //    $.variable,
    //    ':=',
    //    $._expression
    //),
    // ref_assign: $ => seq(
    //    ':=',
    //    choice($.ref_name, $.ref_deref, $.ref_value)
    //),
    assign: ($) =>
      seq(
        field("variable", choice($.variable_access, $.ERR_assign_func_call)),
        field(
          "target",
          choice(
            $.assignment,
            $.ERR_empty_right_hand_assignment,
            $.ERR_missing_dot_in_assignment,
            $.ERR_missing_equal_in_assignment,
            $.ERR_output_assign_in_assignment,
          ),
        ),
      ),

    assignment: ($) => seq(":=", $._expression),

    namespace_access: ($) => choice($.identifier, $.scoped_identifier),

    scoped_identifier: ($) =>
      seq(
        field("path", $._path),
        ".",
        field("target", alias($.identifier, $.target)),
      ),

    _path: ($) => choice($.identifier, $.scoped_identifier),

    begin_path_expression: ($) =>
      choice(
        // invocation (THIS / SUPER / SUPER()) with optional deref, optionally followed by a path_expression
        $.invocation,
        // or a plain path expression
        $.path_expression,
      ),
