crates/tree-sitter/test/corpus/expressions.txt
================================================================================
Binary math operator expressions
================================================================================

FUNCTION fn

v := a * b;
v := a / b;
v := a MOD b;
v := a + b;
v := a - b;

v := a = b;
v := a <> b;
v := a > b;
v := a < b;
v := a >= b;
v := a <= b;

END_FUNCTION

--------------------------------------------------------------------------------

    (source_file
      (func_decl
        (identifier)
        (func_body
          (stmt_list
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (mult_operator
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field))))))
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field)))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (mult_operator
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field))))))
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field)))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (mult_operator
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field))))))
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field)))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (add_operator
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field))))))
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field)))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (add_operator
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field))))))
                  (variable_access
                    (variable
                      (symbolic_variable
                        (path_expression
                          (var_access
                            (field)))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (eq_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (eq_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))))))
                              
================================================================================
Binary cmp operator expressions
================================================================================

FUNCTION fn

v := a = b;
v := a <> b;
v := a > b;
v := a < b;
v := a >= b;
v := a <= b;

END_FUNCTION

--------------------------------------------------------------------------------

    (source_file
      (func_decl
        (identifier)
        (func_body
          (stmt_list
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (eq_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (eq_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))
            (assign
              (variable
                (symbolic_variable
                  (path_expression
                    (var_access
                      (field)))))
              (assignment
                (comparison_operator
                  (ord_operator
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))
                    (variable_access
                      (variable
                        (symbolic_variable
                          (path_expression
                            (var_access
                              (field))))))))))))))
