crates/tree-sitter/test/corpus/extern_pragma.txt
================================================================================
Extern pragma in function body
================================================================================

FUNCTION test : INT
VAR_INPUT x : INT; END_VAR
    {extern 'math' 'abs'}
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    name: (identifier)
    return_type: (numeric_type_name
      (int_type_name
        (sign_int_type_name
          (int_name))))
    variables: (input_decls
      (input_var
        variables: (variable_list
          (identifier))
        type: (var_decl_init
          spec: (simple_type_spec
            (numeric_type_name
              (int_type_name
                (sign_int_type_name
                  (int_name))))))))
    body: (func_body
      (stmt_list
        (extern_pragma
          module: (pragma_string)
          name: (pragma_string))))))

================================================================================
Extern pragma with IEC type spec
================================================================================

FUNCTION SQRT : REAL
VAR_INPUT IN : REAL; END_VAR
    {extern 'math' 'sqrtf' : REAL}
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    name: (identifier)
    return_type: (numeric_type_name
      (real_type_name
        (real_name)))
    variables: (input_decls
      (input_var
        variables: (variable_list
          (identifier))
        type: (var_decl_init
          spec: (simple_type_spec
            (numeric_type_name
              (real_type_name
                (real_name)))))))
    body: (func_body
      (stmt_list
        (extern_pragma
          module: (pragma_string)
          name: (pragma_string)
          type_spec: (numeric_type_name
            (real_type_name
              (real_name))))))))

================================================================================
Multiple extern pragmas for generic function
================================================================================

FUNCTION SQRT : REAL
VAR_INPUT IN : REAL; END_VAR
    {extern 'math' 'sqrtf' : REAL}
    {extern 'math' 'sqrt' : LREAL}
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    name: (identifier)
    return_type: (numeric_type_name
      (real_type_name
        (real_name)))
    variables: (input_decls
      (input_var
        variables: (variable_list
          (identifier))
        type: (var_decl_init
          spec: (simple_type_spec
            (numeric_type_name
              (real_type_name
                (real_name)))))))
    body: (func_body
      (stmt_list
        (extern_pragma
          module: (pragma_string)
          name: (pragma_string)
          type_spec: (numeric_type_name
            (real_type_name
              (real_name))))
        (extern_pragma
          module: (pragma_string)
          name: (pragma_string)
          type_spec: (numeric_type_name
            (real_type_name
              (lreal_name))))))))

================================================================================
Extern pragma with param and result variables
================================================================================

FUNCTION delay : INT
VAR_INPUT ms : INT; END_VAR
    {extern 'rt' 'delay' (param ms) (result delay)}
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    name: (identifier)
    return_type: (numeric_type_name
      (int_type_name
        (sign_int_type_name
          (int_name))))
    variables: (input_decls
      (input_var
        variables: (variable_list
          (identifier))
        type: (var_decl_init
          spec: (simple_type_spec
            (numeric_type_name
              (int_type_name
                (sign_int_type_name
                  (int_name))))))))
    body: (func_body
      (stmt_list
        (extern_pragma
          module: (pragma_string)
          name: (pragma_string)
          params: (extern_param_list
            var: (identifier))
          result: (extern_result
            var: (identifier)))))))

================================================================================
Extern pragma with multiple params
================================================================================

FUNCTION add : INT
VAR_INPUT a : INT; b : INT; END_VAR
    {extern 'math' 'add' (param a b) (result add)}
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    name: (identifier)
    return_type: (numeric_type_name
      (int_type_name
        (sign_int_type_name
          (int_name))))
    variables: (input_decls
      (input_var
        variables: (variable_list
          (identifier))
        type: (var_decl_init
          spec: (simple_type_spec
            (numeric_type_name
              (int_type_name
                (sign_int_type_name
                  (int_name)))))))
      (input_var
        variables: (variable_list
          (identifier))
        type: (var_decl_init
          spec: (simple_type_spec
            (numeric_type_name
              (int_type_name
                (sign_int_type_name
                  (int_name))))))))
    body: (func_body
      (stmt_list
        (extern_pragma
          module: (pragma_string)
          name: (pragma_string)
          params: (extern_param_list
            var: (identifier)
            var: (identifier))
          result: (extern_result
            var: (identifier)))))))
