crates/tree-sitter/test/corpus/generics.txt
================================================================================
Function with generics
================================================================================

FUNCTION fn<T: ANY_INT, Y: ANY_INT>

END_FUNCTION

--------------------------------------------------------------------------------

    (source_file
      (func_decl
        (identifier)
        (generic_spec
          (generic_params
            (generic_rule
              (identifier)
              (identifier))
            (generic_rule
              (identifier)
              (identifier))))))

================================================================================
Function blocks with generics
================================================================================

FUNCTION_BLOCK fn<T: ANY_INT, Y: ANY_INT>

END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

    (source_file
      (fb_decl
        (identifier)
        (generic_spec
          (generic_params
            (generic_rule
              (identifier)
              (identifier))
            (generic_rule
              (identifier)
              (identifier))))))

================================================================================
generics with self-referential constraints
================================================================================

FUNCTION_BLOCK fn<T: ANY_INT + INTO<T>, Y: ANY_INT + INTO<T>>

END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

    (source_file
      (fb_decl
        (identifier)
        (generic_spec
          (generic_params
            (generic_rule
              (identifier)
              (identifier)
              (namespace_access
                (identifier)))
            (generic_rule
              (identifier)
              (identifier)
              (namespace_access
                (identifier)))))))

================================================================================
generics with ANY constraints
================================================================================

FUNCTION_BLOCK fn<T: ANY_INT + INTO<ANY_REAL>, Y: ANY_INT + INTO<ANY_TIME>>

END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

    (source_file
      (fb_decl
        (identifier)
        (generic_spec
          (generic_params
            (generic_rule
              (identifier)
              (identifier)
              (namespace_access
                (identifier)))
            (generic_rule
              (identifier)
              (identifier)
              (namespace_access
                (identifier)))))))

================================================================================
generics with Spec constraints
================================================================================

FUNCTION_BLOCK fn<T: ANY + INTO<INT>, Y: ANY_INT + INTO<INT>>

END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

    (source_file
      (fb_decl
        (identifier)
        (generic_spec
          (generic_params
            (generic_rule
              (identifier)
              (identifier)
              (numeric_type_name
                (int_type_name
                  (sign_int_type_name
                    (int_name)))))
            (generic_rule
              (identifier)
              (identifier)
              (numeric_type_name
                (int_type_name
                  (sign_int_type_name
                    (int_name)))))))))

================================================================================
function call with generic
================================================================================

FUNCTION_BLOCK fb

  fn<T1, T2>();

END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

    (source_file
      (fb_decl
        (identifier)
        (fb_body
          (stmt_list
            (func_call
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))
              (generic_type_args
                (namespace_access
                  (identifier))
                (namespace_access
                  (identifier))))))))

================================================================================
Class with generics
================================================================================

CLASS MyClass<T: ANY_INT>
VAR
    value: T;
END_VAR
END_CLASS

--------------------------------------------------------------------------------

    (source_file
      (class_decl
        (identifier)
        (generic_spec
          (generic_params
            (generic_rule
              (identifier)
              (identifier))))
        (var_decls
          (var_decl_init_list
            (variable_list
              (identifier))
            (var_decl_init
              (simple_type_spec
                (namespace_access
                  (identifier))))))))
